--- a/templates/base.html
+++ b/templates/base.html
@@ -40,6 +40,15 @@
         </div>
     </nav>
 
+    {% for message in messages %}
+    <div class="alert alert-{{ message.tags }} alert-dismissible fade show mb-0" role="alert">
+        <strong>Message: </strong>{{ message }}
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    {% endfor %}
+
     {% block body %}{% endblock body %}
 
     <!-- Optional JavaScript -->
