blog model and blog page created

--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -2,6 +2,15 @@
 
 {% block title %} Blog post {% endblock title %}
 
+{% block blogActive %} active {% endblock blogActive %}
+
 {% block body %}
-<h3>Blog Post</h3>
-{% endblock body %}
+<div class="container my-3">
+    <div class="blog-post">
+        <h2 class="blog-post-title">{{post.title}}</h2>
+        <p class="blog-post-meta">{{post.timeStamp}} by <a href="/about">{{post.author}}</a></p>
+        <p>{{post.content}}</p>
+        <hr>
+    </div>
+</div>
+ {% endblock %}
