--- a/templates/home/contact.html
+++ b/templates/home/contact.html
@@ -2,6 +2,8 @@
 
 {% block title %} Contact {% endblock title %}
 
+{% block contactActive %} active {% endblock contactActive %}
+
 {% block body %}
 
 <div class="container my-3">
