--- a/templates/base.html
+++ b/templates/base.html
@@ -20,16 +20,16 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
+            <li class="nav-item {% block homeActive %}{% endblock homeActive %}">
                 <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item {% block blogActive %}{% endblock blogActive %}">
                 <a class="nav-link" href="/blog">Blog</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item {% block aboutActive %}{% endblock aboutActive %}">
                 <a class="nav-link" href="/about">About</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item {% block contactActive %}{% endblock contactActive %}">
                 <a class="nav-link" href="/contact">Contact</a>
             </li>
             </ul>
