--- a/templates/home/about.html
+++ b/templates/home/about.html
@@ -2,6 +2,8 @@
 
 {% block title %} About {% endblock title %}
 
+{% block aboutActive %} active {% endblock aboutActive %}
+
 {% block body %}
 <h3>About</h3>
 {% endblock body %}
