--- a/templates/base.html
+++ b/templates/base.html
@@ -33,10 +33,24 @@
                 <a class="nav-link" href="/contact">Contact</a>
             </li>
             </ul>
-            <form method="get" action="/search/" class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" id="query" name="query">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
+            <div class="ml-auto form-inline">
+                {% if user.is_authenticated %}
+                <ul class="navbar-nav mr-2">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    {{request.user}}
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="/logout/">Logout</a>
+                    </div>
+                </li>
+                </ul>
+                {% endif %}
+                <form method="get" action="/search/" class="my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" id="query" name="query">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                </form>
+            </div>
         </div>
     </nav>
 
