--- a/templates/home/signup.html
+++ b/templates/home/signup.html
@@ -9,27 +9,27 @@
     <h1 class="h3 mb-3 font-weight-normal text-center">Sign up to do more on SavageCoder</h1>
     <div class="form-group">
         <label for="username">Username</label>
-        <input type="text" class="form-control" id="username" name="username" placeholder="Choose a unique username">
+        <input type="text" class="form-control" id="username" name="username" placeholder="Choose a unique username" required>
     </div>
     <div class="form-group">
         <label for="fname">First Name</label>
-        <input type="text" class="form-control" id="fname" name="fname" placeholder="Enter Your First Name">
+        <input type="text" class="form-control" id="fname" name="fname" placeholder="Enter Your First Name" required>
     </div>
     <div class="form-group">
         <label for="lname">Last Name</label>
-        <input type="text" class="form-control" id="lname" name="lname" placeholder="Enter Your Last Name">
+        <input type="text" class="form-control" id="lname" name="lname" placeholder="Enter Your Last Name" required>
     </div>
     <div class="form-group">
         <label for="email">Email address</label>
-        <input type="email" class="form-control" id="email" name="email" placeholder="name@example.com">
+        <input type="email" class="form-control" id="email" name="email" placeholder="name@example.com" required>
     </div>
     <div class="form-group">
         <label for="pass1">Choose a password</label>
-        <input type="password" class="form-control" id="pass1" name="pass1" placeholder="Choose Your Password">
+        <input type="password" class="form-control" id="pass1" name="pass1" placeholder="Choose Your Password" required>
     </div>
     <div class="form-group">
         <label for="pass2">Confirm Password</label>
-        <input type="password" class="form-control" id="pass2" name="pass2" placeholder="Enter your password again">
+        <input type="password" class="form-control" id="pass2" name="pass2" placeholder="Enter your password again" required>
     </div>
     <button class="btn btn-lg btn-outline-secondary btn-block" type="submit">Sign up</button>
     </form>
