--- a/templates/blog/blogHome.html
+++ b/templates/blog/blogHome.html
@@ -11,7 +11,7 @@
     <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 my-4 position-relative">
         <div class="col p-4 d-flex flex-column position-static">
             <strong class="d-inline-block mb-2 text-primary">Article  by {{post.author}}</strong>
-            <h3 class="mb-0">{{post.title}}</h3>
+            <h3 class="mb-0"><a class="text-dark" href="/blog/{{post.slug}}">{{post.title}}</a></h3>
             <div class="mb-1 text-muted">{{post.datetime}}</div>
             <p class="card-text mb-auto">{{post.content| truncatechars:500}}</p>
             <div class="my-2">
