--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -15,6 +15,7 @@
 </div>
 {% load static %}
 {% load humanize %}
+{% load extras %}
 <div class="container my-3">
     <h4>Comments ({{comments.count}})</h4>
     <div class="container">
@@ -60,6 +61,14 @@
                     </div>
                 </div>
                 {% endif %}
+                <div class="replies my-1">
+                    {% for reply in replies|get_val:comment.sno %}
+                    <div class="container my-1">
+                    <b>{{reply.user.username}}</b> replied <span class="font-weight-lighter">{{reply.timestamp | naturaltime}}</span>
+                    <div>{{reply.comment}}</div>
+                    </div>
+                    {% endfor %}
+                </div>
             </div>
         </div>
     {% endfor %}
