--- a/templates/blog/blogHome.html
+++ b/templates/blog/blogHome.html
@@ -13,7 +13,7 @@
             <strong class="d-inline-block mb-2 text-primary">Article  by {{post.author}}</strong>
             <h3 class="mb-0"><a class="text-dark" href="/blog/{{post.slug}}">{{post.title}}</a></h3>
             <div class="mb-1 text-muted">{{post.datetime}}</div>
-            <p class="card-text mb-auto">{{post.content| truncatechars:500}}</p>
+            <p class="card-text mb-auto"><div class="preview">{{post.content| safe| truncatechars:500 }}</div></p>
             <div class="my-2">
             	<a href="/blog/{{post.slug}}" role="button" class="btn btn-primary">Continue reading</a>
             </div>
@@ -28,4 +28,13 @@
     </div>
     {% endfor %}
 </div>
- {% endblock %}
+{% endblock %}
+
+{% block js %}
+<script>
+let previews = document.getElementsByClassName('preview')
+Array.from(previews).forEach((element)=>{
+    element.innerHTML = element.innerText;
+})
+</script>
+{% endblock js %}
