--- a/templates/base.html
+++ b/templates/base.html
@@ -55,7 +55,7 @@
                 {% endif %}
                 <form method="get" action="/search/" class="my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" id="query" name="query">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Search</button>
                 </form>
             </div>
         </div>
