--- a/templates/blog/blogHome.html
+++ b/templates/blog/blogHome.html
@@ -6,7 +6,7 @@
 
 {% block body %}
 <div class="container my-3">
-    <h2>Coding Articles by SavageCoder</h2>
+    <h2>Tech Articles by SavageCoder</h2>
     {% for post in allPost  %}
     <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 my-4 position-relative">
         <div class="col p-4 d-flex flex-column position-static">
@@ -14,10 +14,9 @@
             <h3 class="mb-0"><a class="text-dark" href="/blog/{{post.slug}}">{{post.title}}</a></h3>
             <div class="mb-1 text-muted">{{post.datetime}}</div>
             <p class="card-text mb-auto"><div class="preview">{{post.content| safe| truncatechars:500 }}</div></p>
-            <div class="my-2">
-            	<a href="/blog/{{post.slug}}" role="button" class="btn btn-primary">Continue reading</a>
+            <div class="my-0">
+            	<a href="/blog/{{post.slug}}" role="button" class="btn btn-link">Continue reading</a>
             </div>
-            
         </div>
         <div class="col-auto d-none d-lg-block">
             <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail">
