--- a/templates/home/search.html
+++ b/templates/home/search.html
@@ -13,11 +13,10 @@
             <strong class="d-inline-block mb-2 text-primary">Article  by {{post.author}}</strong>
             <h3 class="mb-0">{{post.title}}</h3>
             <div class="mb-1 text-muted">{{post.datetime}}</div>
-            <p class="card-text mb-auto">{{post.content| truncatechars:500}}</p>
+            <p class="card-text mb-auto"><div class="preview">{{post.content| safe| truncatechars:500 }}</div></p>
             <div class="my-2">
-            	<a href="/blog/{{post.slug}}" role="button" class="btn btn-primary">Continue reading</a>
+            	<a href="/blog/{{post.slug}}" role="button" class="btn btn-link">Continue reading</a>
             </div>
-            
         </div>
         <div class="col-auto d-none d-lg-block">
             <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail">
@@ -28,4 +27,13 @@
     </div>
     {% endfor %}
 </div>
- {% endblock %}
+{% endblock %}
+
+{% block js %}
+<script>
+let previews = document.getElementsByClassName('preview')
+Array.from(previews).forEach((element)=>{
+    element.innerHTML = element.innerText;
+})
+</script>
+{% endblock js %}
