--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -9,9 +9,9 @@
 <div class="container my-3">
     <div class="jumbotron">
         <h1 class="display-4">Welcome to SavageCoder!</h1>
-        <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+        <p class="lead">A place to write, read, and connect</p>
         <hr class="my-4">
-        <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+        <p>It's easy and free to post your thinking on any topic and connect with readers.</p>
         <a class="btn btn-primary btn-light" href="/about" role="button">Learn more</a>
     </div>
 </div>
